<resources>
    <string name="app_name">program6</string>
    <string name="submit">Submit</string>
    <string name="country">Country</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sex">Sex</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="user_information">User Information</string>
</resources>