<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:gravity="center" android:orientation="vertical" android:padding="30dp" >

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_information"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#26389C"/>
<!--    <ImageView android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/img"/>&lt;!&ndash;   Put an image &ndash;&gt;-->

    <ToggleButton android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/active"
        android:textOff="@string/inactive"/>
    <View
        android:layout_width="match_parent"

        android:layout_height="40dp"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#26389C"
                android:padding="15dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/name"
                android:padding="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#26389C"
                android:padding="15dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="15dp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#26389C"
                android:padding="15dp"

                android:paddingEnd="40dp"
                />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/sex">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male"
                    android:padding="15dp"
                    android:text="@string/male"
                    android:textColor="#26389C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female"
                    android:padding="15dp"
                    android:text="@string/female"
                    android:textColor="#26389C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RadioGroup>
        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#26389C"
                android:padding="15dp"
                android:paddingEnd="5sp" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/country"
                android:padding="15dp"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:padding="15dp"
        android:text="@string/submit"
        android:textColor="#26389C"
        android:textSize="20sp"

        android:textStyle="bold" />


</LinearLayout>
